force-app/main/default/objects/Amadeus_Mapping_Table__c/Amadeus_Mapping_Table__c.object-meta.xml
<CustomObject>
    <label>Amadeus Mapping Table</label>
    <nameField>
        <displayFormat>AMAP:{0000000}</displayFormat>
        <label>Amadeus Mapping Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amadeus Mapping Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>