force-app/main/default/objects/Amadeus_Mapping_Table__c/fields/Cost_Center_Dim_3__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center_Dim_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Center (Dim 3)</label>
    <referenceTo>c2g__codaDimension3__c</referenceTo>
    <relationshipLabel>Amadeus Mapping Tables</relationshipLabel>
    <relationshipName>Amadeus_Mapping_Tables</relationshipName>
    <type>Lookup</type>
</CustomField>