force-app/main/default/objects/Amadeus_Mapping_Table__c/fields/General_Ledger_Account__c.field-meta.xml
<CustomField>
    <fullName>General_Ledger_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Ledger Account</label>
    <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
    <relationshipLabel>Amadeus Mapping Tables</relationshipLabel>
    <relationshipName>Amadeus_Mapping_Tables</relationshipName>
    <type>Lookup</type>
</CustomField>