force-app/main/default/objects/Amadeus_Mapping_Table__c/fields/Mapping_Type__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Type__c</fullName>
    <label>Mapping Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Amadeus FS Reporting</fullName>
            </value>
            <value>
                <fullName>BPC Cost Center</fullName>
            </value>
            <value>
                <fullName>SAP Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>