force-app/main/default/objects/Amadeus_Mapping_Table__c/fields/SAP_Billing_Product__c.field-meta.xml
<CustomField>
    <fullName>SAP_Billing_Product__c</fullName>
    <description>NICC-054659: this is the SAP Billing Product associated with the SAP GL Account</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>this is the SAP Billing Product associated with the SAP GL Account</inlineHelpText>
    <label>SAP Billing Product</label>
    <length>50</length>
    <type>Text</type>
</CustomField>