force-app/main/default/objects/Amadeus_Mapping_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Trial_Balance_2__c</columns>
    <columns>Mapping_Type__c</columns>
    <columns>Output__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>