force-app/main/default/objects/Amadeus_Mapping_Table__c/listViews/BPC_Cost_Centers.listView-meta.xml
<ListView>
    <fullName>BPC_Cost_Centers</fullName>
    <columns>Output__c</columns>
    <columns>FFA_Company__c</columns>
    <columns>Business_Line_Dim_2__c</columns>
    <columns>Cost_Center_Dim_3__c</columns>
    <columns>General_Ledger_Account__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Mapping_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Mapping_Type__c</field>
        <operation>equals</operation>
        <value>BPC Cost Center</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterThan</operation>
        <value>1/31/2019 12:00 AM</value>
    </filters>
    <label>BPC Cost Centers</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>