force-app/main/default/objects/Amadeus_Mapping_Table__c/listViews/Financial_Statement_Coding.listView-meta.xml
<ListView>
    <fullName>Financial_Statement_Coding</fullName>
    <columns>NAME</columns>
    <columns>FFA_Company__c</columns>
    <columns>Mapping_Type__c</columns>
    <columns>Output__c</columns>
    <columns>Business_Line_Dim_2__c</columns>
    <columns>Cost_Center_Dim_3__c</columns>
    <columns>Trial_Balance_2__c</columns>
    <columns>General_Ledger_Account__c</columns>
    <columns>Order_of_Evaluation__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Mapping_Type__c</field>
        <operation>equals</operation>
        <value>Amadeus FS Reporting</value>
    </filters>
    <label>Financial Statement Coding</label>
    <language>en_US</language>
</ListView>