force-app/main/default/objects/Amadeus_Mapping_Table__c/listViews/SAP_Integration_Records.listView-meta.xml
<ListView>
    <fullName>SAP_Integration_Records</fullName>
    <columns>NAME</columns>
    <columns>General_Ledger_Account__c</columns>
    <columns>SAP_GL_Account_Name__c</columns>
    <columns>SAP_GL_Account_Number__c</columns>
    <columns>SAP_Billing_Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SAP_GL_Account_Number__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>SAP Integration Records</label>
    <language>en_US</language>
</ListView>